@@ -136,3 +136,6 @@ Milan Hrala
 
 Valdemaras Pipiras
   for providing Lithuanian language texts
+
+sk8ter
+  for fixing failures when switching between two encrypted channels
