@@ -1,6 +1,8 @@
 VDR Plugin 'streamdev' Revision History
 ---------------------------------------
 
+- switching between two encrypted channels on the same transponder didn't
+  always work (thanks to sk8ter@vdrportal)
 - added DELT FORCE option to delete running timers (thanks to Alwin Esch)
 - added VDR 1.7.11 parental rating support for VTP LSTE command (thanks to
   Alwin Esch)
